--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<hr>
 				<h3>About Me:</h3>
 					<h4>My hometown is Las Vegas.</h4>
-					<h4>My favorite color is pink.</h4>
+					<h4>My favorite color is green.</h4>
 					<h4>My favorite food is sushi.</h4>
 					<h4>If I could be any animal, I would be a dolphin.</h4>
 			</div>
 		  </body>
-		</html>
+		</html><p>Frenchies are wild!</p>
