--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<h4>My favorite color is green.</h4>
 					<h4>My favorite food is sushi.</h4>
 					<h4>If I could be any animal, I would be a dolphin.</h4>
-			</div>
+					<p>Frenchies are wild!</p>
+				</div>
 		  </body>
-		</html><p>Frenchies are wild!</p>
+		</html>
